--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -23,18 +23,17 @@
                       <div class="col-sm-4 offset-md-1 py-4">
                         <h4 class="text-white">Contatos</h4>
                         <ul class="list-unstyled">
-                          <li><a href="https://twitter.com/imaginarydecker" target="_blank" class="text-white">Follow on Twitter</a></li>
-                          <li><a href="https://www.facebook.com/aravind.Xb" target="_blank" class="text-white">Like on Facebook</a></li>
-                         # <li><a href="mailto:this.aravind@gmail.com?Subject=Hi" target="_blank" class="text-white">Email me</a></li>
+                          <li><a href="https://www.linkedin.com/in/charlesdavidmachado/" target="_blank" class="text-white">Linkedin</a></li>
+                          <li><a href="https://www.facebook.com/pedro.moreira.3382" target="_blank" class="text-white">Facebook</a></li>
                         </ul>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="navbar navbar-dark bg-dark box-shadow">
+                <div class="navbar navbar-light" style="background-color: #0967aa;">
                   <div class="container d-flex justify-content-between">
                     <a href="#" class="navbar-brand d-flex align-items-center">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
                       <strong>Avaliação</strong>
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +55,7 @@
     <ul>
     {% for question in latest_question_list %}
         <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
-        <h4 class="text-white">.    </h4>
+        
     {% endfor %}
     </ul>
 {% else %}
